# readmers

./: .justfile  Cargo.toml  LICENSE  README.md  template.md
src/: lib.rs  main.rs  readme.rs
src/resources/: badges.md  badgets.md  template.md
