[package]
name = "readmers"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6"
html_editor = "0.5"

# Templates
tera = { version = "1.17", features = ["builtins"] }

# Yaml
serde_yaml = "0.9"
